fix: applied previous feat to index.html -applied previous feat on product.html to index.html -added z-index to the incart popover

--- a/frontend/sass/_component.scss
+++ b/frontend/sass/_component.scss
@@ -36,6 +36,7 @@
         background-color: white;
         border-radius:5px;
         padding:5px;
+        z-index:5;
 
 
         &:before{
