--- a/frontend/style.css
+++ b/frontend/style.css
@@ -32,6 +32,7 @@ body {
   background-color: white;
   border-radius: 5px;
   padding: 5px;
+  z-index: 5;
 }
 #in_cart_popover:before {
   display: inline-block;
